# matgl

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CITATION.cff  Dockerfile  LICENSE  LICENSE.md  MoS_relax.traj  Mo_hello.cif  README.md  changes.md  developer.md  hubconf.py  maths.py.patch  pylintrc  pyproject.toml  requirements-ci.txt  requirements.txt  run_tests.sh  setup.cfg  setup.py  tasks.py  train.py
.devcontainer/: Dockerfile
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: lint.yml  linting.yml  test.yml  testing.yml
configs/: qm9_test.yaml
dev/: install_dgl.sh  predict_tensornet_matpes.py  refactor.py  update_model_ver.py
docker/cpu/: Dockerfile  Dockerfile-test
docker/cuda/: Dockerfile
docker/lammps/: Dockerfile
docker/lammps-simple/: Dockerfile
docs/: .buildinfo  CNAME  _config.yml  changes.html  changes.md  conf.py  developer.html  developer.md  genindex.html  index.html  index.markdown  index.md  matgl.apps.html  matgl.apps.md  matgl.apps.pes.html  matgl.config.html  matgl.data.dataset.html  matgl.data.html  matgl.data.md  matgl.data.transformer.html  matgl.dataloader.dataset.html  matgl.dataloader.html  matgl.electrostatics.md  matgl.ext.ase.html  matgl.ext.html  matgl.ext.md  matgl.ext.pymatgen.html  matgl.graph.compute.html  matgl.graph.converters.html  matgl.graph.data.html  matgl.graph.html  matgl.graph.md  matgl.html  matgl.layers._activations.html  matgl.layers._atom_ref.html  matgl.layers._bond.html  matgl.layers._core.html  matgl.layers._embedding.html  matgl.layers._graph_convolution.html  matgl.layers._readout.html  (+36 more)
docs/doctrees/: environment.pickle  index.doctree  matgl.apps.doctree  matgl.data.doctree  matgl.doctree  matgl.ext.doctree  matgl.graph.doctree  matgl.layers.doctree  matgl.models.doctree  matgl.utils.doctree  modules.doctree
docs/tutorials/: Benchmarking M3GNet Predictions of Cubic Lattice Parameters.md  Combining the M3GNet Universal Potential with Property Prediction Models.md  Errors in Cubic Crystal Lattice Parameters.md  Fine-Tuning a M3GNet Potential on the Customized Dataset with DIRECT Sampling.md  Property Predictions using MEGNet or M3GNet Models.md  Relaxations and Simulations using the M3GNet Molecular Potential.md  Relaxations and Simulations using the M3GNet Universal Potential.md  Relaxations and Simulations using the QET Universal Potential.md  Training a M3GNet Formation Energy Model with PyTorch Lightning.md  Training a M3GNet Potential with PyTorch Lightning.md  Training a MEGNet Formation Energy Model with PyTorch Lightning.md  Training a Multi-Fidelity MEGNet BandGap Energy Model with PyTorch Lightning.md  Using LAMMPS with MatGL.md  Using Pre-trained MEGNet or M3GNet Models for Property Predictions.md  Using the M3GNet Universal Potential with Property Prediction Models.md  Using the Pre-trained M3GNet Universal Potential for PES Predictions.md  Validation of Refitted MatGL versus Original TF M3GNet.md
docs_src/: changes.md  conf.py  developer.md  index.md  matgl.apps.pes.rst  matgl.apps.rst  matgl.apps.tests.rst  matgl.apps.tests.test_pes.rst  matgl.config.rst  matgl.data.dataset.rst  matgl.data.rst  matgl.data.tests.rst  matgl.data.tests.test_transformer.rst  matgl.data.transformer.rst  matgl.dataloader.dataset.rst  matgl.dataloader.rst  matgl.ext.ase.rst  matgl.ext.pymatgen.rst  matgl.ext.rst  matgl.ext.tests.rst  matgl.ext.tests.test_ase.rst  matgl.graph.compute.rst  matgl.graph.converters.rst  matgl.graph.data.rst  matgl.graph.rst  matgl.graph.tests.rst  matgl.graph.tests.test_compute.rst  matgl.graph.tests.test_converters.rst  matgl.graph.tests.test_data.rst  matgl.layers._activations.rst  matgl.layers._atom_ref.rst  matgl.layers._bond.rst  matgl.layers._core.rst  matgl.layers._embedding.rst  matgl.layers._graph_convolution.rst  matgl.layers._readout.rst  matgl.layers._three_body.rst  matgl.layers.activations.rst  matgl.layers.atom_ref.rst  matgl.layers.bond_expansion.rst  (+41 more)
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
examples/: Benchmarking M3GNet Predictions of Cubic Lattice Parameters.ipynb  Combining the M3GNet Universal Potential with Property Prediction Models.ipynb  Cubic Crystal Test.ipynb  Errors in Cubic Crystal Lattice Parameters.ipynb  Fine-Tuning a M3GNet Potential on the Customized Dataset with DIRECT Sampling.ipynb  Pre-trained M3GNet for PES Predictions.ipynb  Pre-trained M3GNet for Property Predictions.ipynb  Pre-trained MEGNet for Property Predictions.ipynb  Property Predictions using MEGNet or M3GNet Models.ipynb  Relaxations and Simulations using the M3GNet Molecular Potential.ipynb  Relaxations and Simulations using the M3GNet Universal Potential.ipynb  Relaxations and Simulations using the QET Universal Potential.ipynb  Speed comparison of MatGL vs TF M3Gnet.ipynb  Training a CHGNet with PyTorch Lightning.ipynb  Training a M3GNet Formation Energy Model with PyTorch Lightning.ipynb  Training a M3GNet Potential with PyTorch Lightning.ipynb  Training a MEGNet Formation Energy Model with PyTorch Lightning.ipynb  Training a Multi-Fidelity MEGNet BandGap Energy Model with PyTorch Lightning.ipynb  Using LAMMPS with MatGL.ipynb  Using MEGNet Pre-trained Models for Property Predictions.ipynb  Using Pre-trained MEGNet or M3GNet for Property Predictions.ipynb  Using the M3GNet Universal Potential with Property Prediction Models.ipynb  Validation of Refitted MatGL versus Original TF M3GNet.ipynb  m3gnet.py  qm9_utils.py  train.py
examples/trainer_beta/: m3gnet.py  qm9_utils.py  train.py
m3gnet/graph/: __init__.py  compute.py  converters.py
matgl/: __init__.py  cli.py  config.py
matgl/apps/: __init__.py  pes.py
matgl/basis/: __init__.py  _radial.py  _spherical.py
matgl/data/: __init__.py  transformer.py
megnet/: __init__.py  config.py  layers.py  types.py
pretrained_models/: MEGNet-MP-2018.6.1-Eform.pt  MEGNet-MP-2019.4.1-BandGap-mfi.pt  README.md
tests/: conftest.py  test_cli.py  test_config.py  test_converters.py  test_dataloader.py  test_default_dtype.py  test_integration.py  test_layer.py  test_math.py  test_model.py
utils/: utils.py
(+403 files in other folders)
